5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1638_2731.log
== TEST (2019-04-13 16:13:04) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite a coeficiente b: "))
r = float(input("Digite o raio: "))
from math import*
r = sqrt ((x - a)** 2 + (y - b)** 2)
if(b>0):
	print("Superiores")
else:
	print("Inferiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r = sqrt ((x - a)** 2 + (y - b)** 2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 16:14:50) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite a coeficiente b: "))
r = float(input("Digite o raio: "))
x = 1
y = 1
from math import*
r = sqrt ((x - a)** 2 + (y - b)** 2)
if(b>0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:15:05) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite a coeficiente b: "))
r = float(input("Digite o raio: "))
x = 1
y = 1
from math import*
r = sqrt ((x - a)** 2 + (y - b)** 2)
if(b>0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.121318
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
